# devops-directive-kubernetes-course

./: .gitignore  README.md  Taskfile.yaml  devbox.json  pyproject.toml
.github/workflows/: image-ci.yml
01-history-and-motivation/: README.md
02-technology-overview/: README.md
03-installation-and-setup/: .gitignore  README.md  Taskfile.yaml  kind-config.yaml  kind-config.yaml.TEMPLATE
03-installation-and-setup/kind-bind-mount-1/: hello-from-host  test.cc
03-installation-and-setup/kind-bind-mount-2/: hello-from-host
04-built-in-resource-types/: README.md
04-built-in-resource-types/ConfigMap/: Namespace.yaml  Pod.configmap-example.yaml  Taskfile.yaml
04-built-in-resource-types/CronJob/: CronJob.echo-date-better.yaml  CronJob.echo-date-minimal.yaml  Namespace.yaml  Taskfile.yaml
04-built-in-resource-types/DaemonSet/: DaemonSet.fluentd-minimal.yaml  Namespace.yaml  Pod.fluentd-minimal.yaml  Taskfile.yaml
05-helm/: README.md
06-demo-application/: README.md  Taskfile.yaml
07-demo-application/: Makefile
07-demo-application/load-generator-python/: Dockerfile  Makefile  pyproject.toml
07-deploying-demo-application/: README.md  Taskfile.yaml
08-extending-kubernetes/: README.md
09-deploying-auxiliary-tooling/: README.md  Taskfile.yaml
10-developer-experience/: README.md  Taskfile.yaml
11-debugging/: Namespace.yaml  README.md  Taskfile.yaml  microservices-demo.yaml
12-deploying-to-multiple-environments/: README.md  Taskfile.yaml
13-cluster-and-node-upgrades/: README.md  Taskfile.yaml
14-cicd/: README.md  Taskfile.yaml
gcloud/: flake.nix
(+307 files in other folders)
