[tool.poetry]
name = "load-generator-python"
version = "0.1.0"
description = ""
authors = ["sid <sid@devopsdirective.com>"]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
